inicio js login

--- a/Toranj-front/css/welcome.css
+++ b/Toranj-front/css/welcome.css
@@ -10,7 +10,7 @@
 }
 
 .bg-image {
-  background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
+  background-image: url('/img/logo.png');
   background-size: cover;
   background-position: center;
 }
