--- a/Toranj-front/login/welcome.css
+++ b/Toranj-front/login/welcome.css
@@ -38,15 +38,18 @@
   padding: var(--input-padding-y) var(--input-padding-x);
   height: auto;
   border-radius: 2rem;
+  
 }
 
 .form-label-group>label {
-  position: absolute;
+  /* position: absolute;   EL ABSOLUTE HACE QUE NO PUEDA CLICKAR EN LOS INPUT*/
   top: 0;
   left: 0;
   display: block;
   width: 100%;
   margin-bottom: 0;
+  
+  
   /* Override default `<label>` margin */
   line-height: 1.5;
   color: #495057;
@@ -80,6 +83,7 @@
 .form-label-group input:not(:placeholder-shown) {
   padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
   padding-bottom: calc(var(--input-padding-y) / 3);
+  
 }
 
 .form-label-group input:not(:placeholder-shown)~label {
@@ -87,4 +91,5 @@
   padding-bottom: calc(var(--input-padding-y) / 3);
   font-size: 12px;
   color: #777;
+  
 }
